--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -383,3 +383,23 @@ video {
 [hidden] {
   display: none;
 }
+
+.ant-btn-primary {
+  background-color: #003b7d;
+  border-color: #003b7d;
+}
+.ant-btn-primary:hover {
+  background-color: #006a81 !important;
+  border-radius: 0.4rem !important;
+  border-color: #006a81 !important;
+}
+
+.ant-btn-default {
+  border-color: #006a81;
+  color: #006a81;
+}
+
+.ant-btn-default:hover {
+  border-color: #003b7d;
+  color: #003b7d;
+}
